agregando detalles al mvc

--- a/src/views/productCart.html
+++ b/src/views/productCart.html
@@ -7,6 +7,15 @@
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-    PRODCUT CART
+    <h1>PRUEBA RAPIDA DE MVC CORRECTO - PRODUCT CART</h1>
+    <ul>
+        <li><a href="/">Index</a></li>
+        <li><a href="/login">Login</a></li>
+        <li><a href="/register">Register</a></li>
+        <li><a href="/productCart">Product Cart</a></li>
+        <li><a href="/productDetail">Product Detail</a></li>
+    </ul>
+    <hr>
+    <a href="/"> <-----VOLVER</a>
 </body>
 </html>
