--- a/src/views/index.html
+++ b/src/views/index.html
@@ -7,6 +7,13 @@
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-    INDEX
+    <h1>PRUEBA RAPIDA DE MVC CORRECTO</h1>
+    <ul>
+        <li><a href="/">Index</a></li>
+        <li><a href="/login">Login</a></li>
+        <li><a href="/register">Register</a></li>
+        <li><a href="/productCart">Product Cart</a></li>
+        <li><a href="/productDetail">Product Detail</a></li>
+    </ul>
 </body>
 </html>
