--- a/src/views/register.html
+++ b/src/views/register.html
@@ -17,5 +17,15 @@
     </ul>
     <hr>
     <a href="/"> <-----VOLVER</a>
+
+    <form action="/register" method="post" id="form_register">
+        <label>Nombre</label>
+        <input type="text" placeholder="ingresa tu nombre" name="nombre"/>
+        <hr>
+        <label>apellido</label>
+        <input type="text" placeholder="ingresa tu apellido" name="apellido"/>
+        <hr>
+        <input type="submit" name="btnRegistrar" value="Registrar Usuario">
+    </form>
 </body>
 </html>
