dejando funcional function.js de la carpeta js/

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -15,5 +15,7 @@
         <li><a href="/productCart">Product Cart</a></li>
         <li><a href="/productDetail">Product Detail</a></li>
     </ul>
+    <!-- aqui script -->
+    <script src="/js/function.js"></script>
 </body>
 </html>
