--- a/src/views/register.html
+++ b/src/views/register.html
@@ -27,5 +27,7 @@
         <hr>
         <input type="submit" name="btnRegistrar" value="Registrar Usuario">
     </form>
+    <!-- aqui script -->
+    <script src="/js/function.js"></script>
 </body>
 </html>
