--- a/src/views/productCart.html
+++ b/src/views/productCart.html
@@ -17,5 +17,7 @@
     </ul>
     <hr>
     <a href="/"> <-----VOLVER</a>
+    <!-- aqui script -->
+    <script src="/js/function.js"></script>
 </body>
 </html>
