--- a/src/views/productDetail.html
+++ b/src/views/productDetail.html
@@ -17,5 +17,7 @@
     </ul>
     <hr>
     <a href="/"> <-----VOLVER</a>
+    <!-- aqui script -->
+    <script src="/js/function.js"></script>
 </body>
 </html>
