--- a/src/views/index.html
+++ b/src/views/index.html
@@ -7,13 +7,14 @@
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-    <h1>PRUEBA RAPIDA DE MVC CORRECTO</h1>
+    <h1>PRUEBA RAPIDA DE MVC CORRECTO - INDEX</h1>
     <ul>
         <li><a href="/">Index</a></li>
         <li><a href="/login">Login</a></li>
         <li><a href="/register">Register</a></li>
         <li><a href="/productCart">Product Cart</a></li>
         <li><a href="/productDetail">Product Detail</a></li>
+        <li><a href="/productDetail/articulo/17">Product Detail con valor(ej: 17)</a></li>
     </ul>
     <!-- aqui script -->
     <script src="/js/function.js"></script>
