--- a/src/views/productDetail.html
+++ b/src/views/productDetail.html
@@ -14,6 +14,8 @@
         <li><a href="/register">Register</a></li>
         <li><a href="/productCart">Product Cart</a></li>
         <li><a href="/productDetail">Product Detail</a></li>
+        <li><a href="/productDetail/articulo/17">Product Detail con valor(ej: 17)</a></li>
+
     </ul>
     <hr>
     <a href="/"> <-----VOLVER</a>
