armando ruta de comentarios en productDetails

--- a/src/views/productDetail.html
+++ b/src/views/productDetail.html
@@ -15,6 +15,7 @@
         <li><a href="/productCart">Product Cart</a></li>
         <li><a href="/productDetail">Product Detail</a></li>
         <li><a href="/productDetail/articulo/17">Product Detail con valor(ej: 17)</a></li>
+        <li><a href="/productDetail/articulo/17/comentarios">Comentarios del Articulo 17 de ejemplo</a></li>
 
     </ul>
     <hr>
