--- a/src/views/login.html
+++ b/src/views/login.html
@@ -1,25 +1,175 @@
 <!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PowerCoreHard Online</title>
+<html lang="es-AR">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="author" content="XT-PC">
+    <title>PowerCore</title>
+    <meta name="description" content="Compra los productos para tu pc gamer en el sitio número uno de Argentina">
+    
+    <link rel="shortcut icon" href="/favicon.ico">
     <link rel="stylesheet" href="/css/style.css">
-</head>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="js/scripts.js"></script>
+  </head>
 <body>
-    <h1>PRUEBA RAPIDA DE MVC CORRECTO - LOGIN</h1>
-    <ul>
-        <li><a href="/">Index</a></li>
-        <li><a href="/login">Login</a></li>
-        <li><a href="/register">Register</a></li>
-        <li><a href="/productCart">Product Cart</a></li>
-        <li><a href="/productDetail">Product Detail</a></li>
-        <li><a href="/productDetail/articulo/17">Product Detail con valor(ej: 17)</a></li>
+    <header>
+        <nav>
+          <div id="logo">
+            <img src="/img/logo.png" alt="XT-PC">
+          </div>
+          <div id="menu">
+            <ul>
+              <li><a href="/">Inicio</a></li>
+              <li><a href="#">Productos</a></li>
+              <li><a href="#">Contacto</a></li>
+            </ul>
+          </div>
+          <div id="search">
+            <input type="text" placeholder="Buscar...">
+            <button><i class="fas fa-search"></i></button>
+          </div>
+          <div id="user">
+            <i class="fas fa-user" onclick="toggleUserMenu()"></i>
+            <div id="user-menu">
+              <ul>
+                <li><a href="/register">Registrarse</a></li>
+                <li><a href="/login">Ingresar</a></li>
+                <li><a href="/productCart">Ver Pedidos</a></li>
+              </ul>
+            </div>
+          </div>
+          <div id="cart">
+            <a href="/productCart"><i class="fas fa-shopping-cart"></i></a>
+          </div>
+        </nav>
+      </header>
 
-    </ul>
-    <hr>
-    <a href="/"> <-----VOLVER</a>
-    <!-- aqui script -->
-    <script src="/js/function.js"></script>
+  <main>
+    <div class="account">
+  
+      <div class="item">
+        <div style="display:none" class="item-login">
+          <h3>Ingresar con una cuenta</h3>
+          <hr>
+          <div class="content col-2">
+            <!-- GOOGLE LOGIN -->
+            <div class="form-group google">
+              <div id="google-signin2">
+                <div style="height:40px;width:350px;" class="abcRioButton abcRioButtonLightBlue">
+                  <div class="abcRioButtonContentWrapper">
+                    <div class="abcRioButtonIcon" style="padding:10px">
+                      <div style="width:18px;height:18px;" class="abcRioButtonSvgImageWithFallback abcRioButtonIconImage abcRioButtonIconImage18">
+                        <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="18px" height="18px" viewBox="0 0 48 48" class="abcRioButtonSvg">
+                          <g>
+                            <path fill="#EA4335" d="M24 9.5c3.54 0 6.71 1.22 9.21 3.6l6.85-6.85C35.9 2.38 30.47 0 24 0 14.62 0 6.51 5.38 2.56 13.22l7.98 6.19C12.43 13.72 17.74 9.5 24 9.5z"></path>
+                            <path fill="#4285F4" d="M46.98 24.55c0-1.57-.15-3.09-.38-4.55H24v9.02h12.94c-.58 2.96-2.26 5.48-4.78 7.18l7.73 6c4.51-4.18 7.09-10.36 7.09-17.65z"></path>
+                            <path fill="#FBBC05" d="M10.53 28.59c-.48-1.45-.76-2.99-.76-4.59s.27-3.14.76-4.59l-7.98-6.19C.92 16.46 0 20.12 0 24c0 3.88.92 7.54 2.56 10.78l7.97-6.19z"></path>
+                            <path fill="#34A853" d="M24 48c6.48 0 11.93-2.13 15.89-5.81l-7.73-6c-2.15 1.45-4.92 2.3-8.16 2.3-6.26 0-11.57-4.22-13.47-9.91l-7.98 6.19C6.51 42.62 14.62 48 24 48z"></path>
+                            <path fill="none" d="M0 0h48v48H0z"></path>
+                          </g>
+                        </svg>
+                      </div>
+                    </div>
+                    <span style="font-size:14px;line-height:38px;" class="abcRioButtonContents">
+                      <span id="not_signed_iny6q2bgatjhb5">Iniciar sesión con Google</span>
+                      <span id="connectedy6q2bgatjhb5" style="display:none">Has iniciado sesión con Google</span>
+                    </span>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- FACEBOOK LOGIN -->
+            <div class="form-group face">
+              <div class="fb-login-button fb_iframe_widget" data-width="350" data-size="large" data-onlogin="onLoginFB()" data-button-type="login_with" data-auto-logout-link="false" data-use-continue-as="false" data-scope="email" login_text="" fb-xfbml-state="rendered" fb-iframe-plugin-query="app_id=1337166216635779&amp;auto_logout_link=false&amp;button_type=login_with&amp;container_width=0&amp;locale=es_LA&amp;login_text=&amp;scope=email&amp;sdk=joey&amp;size=large&amp;use_continue_as=false&amp;width=350">
+                <span style="vertical-align: bottom; width: 0px; height: 0px;">
+                  <iframe name="f912a5345b7ddac5b" width="350px" height="1000px" data-testid="fb:login_button Facebook Social Plugin" title="fb:login_button Facebook Social Plugin" frameborder="0" allowtransparency="true" allowfullscreen="true" scrolling="no" allow="encrypted-media" src="https://www.facebook.com/v5.0/plugins/login_button.php?app_id=1337166216635779&amp;auto_logout_link=false&amp;button_type=login_with&amp;channel=https%3A%2F%2Fstaticxx.facebook.com%2Fx%2Fconnect%2Fxd_arbiter%2F%3Fversion%3D46%23cb%3Df45735c087a6c057f%26domain%3Dwww.xt-pc.com.ar%26is_canvas%3Dfalse%26origin%3Dhttps%253A%252F%252Fwww.xt-pc.com.ar%252Ff15a24e1fe5ef52ae%26relation%3Dparent.parent&amp;container_width=0&amp;locale=es_LA&amp;login_text=&amp;scope=email&amp;sdk=joey&amp;size=large&amp;use_continue_as=false&amp;width=350" class="" style="border: none; visibility: visible; width: 0px; height: 0px;"></iframe>
+                </span>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="item-login" style="margin:25px auto 0">
+          <h3>Iniciar sesión</h3>
+          <hr>
+          <div class="content col-2">
+            <form action="javascript:void(0)" id="Login" data-gtm-form-interact-id="2">
+              <div class="form-group">
+                <input class="form-input" type="email" name="email" id="email" required="" placeholder="Email" data-gtm-form-interact-field-id="2">
+              </div>
+              <div class="form-group">
+                <input class="form-input" type="password" name="password" id="password" required="" placeholder="Contraseña" data-gtm-form-interact-field-id="3">
+              </div>
+            </form>
+          </div>
+          <div class="cta">
+            <div>
+              <a onclick="login()" class="btn btn-accent">Entrar</a>
+            </div>
+          </div>
+        </div>
+        <div class="item-login">
+          <h3>Recuperar contraseña</h3>
+          <hr>
+          <div class="content col-2">
+            <form action="javascript:void(0)" id="PassRec" data-gtm-form-interact-id="0">
+              <div class="form-group">
+                <input class="form-input" type="email" name="email" id="email" required="" placeholder="Email" data-gtm-form-interact-field-id="0">
+              </div>
+            </form>
+          </div>
+          <div class="cta">
+            <div>
+              <a onclick="passRec()" class="btn btn-accent">Enviar</a>
+            </div>
+          </div>
+        </div>
+        <div class="item-login">
+          <h3>Reenviar email de activación</h3>
+          <hr>
+          <div class="content col-2">
+            <form action="javascript:void(0)" id="Activation" data-gtm-form-interact-id="1">
+              <div class="form-group">
+                <input class="form-input" type="email" name="email" id="email" required="" placeholder="Email" data-gtm-form-interact-field-id="1">
+              </div>
+            </form>
+          </div>
+          <div class="cta">
+            <div>
+              <a onclick="Activation()" class="btn btn-accent">Enviar</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </main>
+  
+  
+
+  <footer>
+    <p>&copy; 2024 PowerCore. Trabajo grupal N&deg; 5.</p>
+  </footer>
+
+  <script>
+    function toggleUserMenu() {
+      document.getElementById('user-menu').classList.toggle('show');
+    }
+
+    window.onclick = function(event) {
+      if (!event.target.matches('.fa-user')) {
+        var dropdowns = document.getElementsByClassName("user-menu");
+        for (var i = 0; i < dropdowns.length; i++) {
+          var openDropdown = dropdowns[i];
+          if (openDropdown.classList.contains('show')) {
+            openDropdown.classList.remove('show');
+          }
+        }
+      }
+    }
+  </script>
 </body>
 </html>
