subiendo fondo posible trasp

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -20,7 +20,7 @@
   <header>
     <nav>
       <div id="logo">
-        <img src="/img/logo.png" alt="XT-PC">
+        <img src="/images/PowerCore.svg" alt="PowerCore">
       </div>
       <div id="menu">
         <ul>
