subiendo 4 imagenes para productos

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -58,28 +58,28 @@
       <h2>Productos Destacados</h2>
       <div class="productos-grid">
         <div class="producto">
-          <img src="/img/producto1.jpg" alt="Producto 1">
+          <img src="/images/productos/1.jpg" alt="Producto 1">
           <h3>Producto 1</h3>
           <p class="precio">$1000</p>
           <a href="/productDetail">Ver mas Info</a>
           <button class="btn">Comprar</button>
         </div>
         <div class="producto">
-          <img src="/img/producto2.jpg" alt="Producto 2">
+          <img src="/images/productos/2.jpg" alt="Producto 2">
           <h3>Producto 2</h3>
           <p class="precio">$2000</p>
           <a href="/productDetail">Ver mas Info</a>
           <button class="btn">Comprar</button>
         </div>
         <div class="producto">
-          <img src="/img/producto3.jpg" alt="Producto 3">
+          <img src="/images/productos/3.jpg" alt="Producto 3">
           <h3>Producto 3</h3>
           <p class="precio">$3000</p>
           <a href="/productDetail">Ver mas Info</a>
           <button class="btn">Comprar</button>
         </div>
         <div class="producto">
-          <img src="/img/producto4.jpg" alt="Producto 4">
+          <img src="/images/productos/4.jpg" alt="Producto 4">
           <h3>Producto 4</h3>
           <p class="precio">$4000</p>
           <a href="/productDetail">Ver mas Info</a>
