--- a/src/views/index.html
+++ b/src/views/index.html
@@ -58,31 +58,35 @@
       <h2>Productos Destacados</h2>
       <div class="productos-grid">
         <div class="producto">
-          <img src="/images/productos/1.jpg" alt="Producto 1">
+            <a href="/productDetail"><img src="/images/productos/1.jpg" alt="Producto 1">
           <h3>Producto 1</h3>
+          <p class="descripcion">NOTEBOOK HP 15.6"" VICTUS RYZEN 5 7535HS 8GB 512GB RTX 2050 FHD W11 15-FB1013DX</p>
           <p class="precio">$1000</p>
-          <a href="/productDetail">Ver mas Info</a>
+          <a href="/productDetail"><i class="fas fa-info-circle"></i>ver detalle</a> 
           <button class="btn">Comprar</button>
         </div>
         <div class="producto">
-          <img src="/images/productos/2.jpg" alt="Producto 2">
+            <a href="/productDetail"><img src="/images/productos/2.jpg" alt="Producto 2">
           <h3>Producto 2</h3>
+          <p class="descripcion">NOTEBOOK HP 15.6"" VICTUS RYZEN 5 7535HS 8GB 512GB RTX 2050 FHD W11 15-FB1013DX</p>
           <p class="precio">$2000</p>
-          <a href="/productDetail">Ver mas Info</a>
+          <a href="/productDetail"><i class="fas fa-info-circle"></i>ver detalle</a> 
           <button class="btn">Comprar</button>
         </div>
         <div class="producto">
-          <img src="/images/productos/3.jpg" alt="Producto 3">
+            <a href="/productDetail"><img src="/images/productos/3.jpg" alt="Producto 3">
           <h3>Producto 3</h3>
+          <p class="descripcion">NOTEBOOK HP 15.6"" VICTUS RYZEN 5 7535HS 8GB 512GB RTX 2050 FHD W11 15-FB1013DX</p>
           <p class="precio">$3000</p>
-          <a href="/productDetail">Ver mas Info</a>
+          <a href="/productDetail"><i class="fas fa-info-circle"></i>ver detalle</a> 
           <button class="btn">Comprar</button>
         </div>
         <div class="producto">
-          <img src="/images/productos/4.jpg" alt="Producto 4">
+            <a href="/productDetail"><img src="/images/productos/4.jpg" alt="Producto 4">
           <h3>Producto 4</h3>
+          <p class="descripcion">NOTEBOOK HP 15.6"" VICTUS RYZEN 5 7535HS 8GB 512GB RTX 2050 FHD W11 15-FB1013DX</p>
           <p class="precio">$4000</p>
-          <a href="/productDetail">Ver mas Info</a>
+          <i class="fas fa-info-circle"></i>ver detalle</a> 
           <button class="btn">Comprar</button>
         </div>
       </div>
