--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,83 @@
-/* General Styles */
+/*CSS Reset Start*/
+/* Box sizing rules */
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+/* Prevent font size inflation */
+html {
+  -moz-text-size-adjust: none;
+  -webkit-text-size-adjust: none;
+  text-size-adjust: none;
+}
+
+/* Remove default margin in favour of better control in authored CSS */
+body, h1, h2, h3, h4, p,
+figure, blockquote, dl, dd {
+  margin-block-end: 0;
+}
+
+/* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
+ul[role='list'],
+ol[role='list'] {
+  list-style: none;
+}
+
+/* Set core body defaults */
+body {
+  min-height: 100vh;
+  line-height: 1.5;
+}
+
+/* Set shorter line heights on headings and interactive elements */
+h1, h2, h3, h4,
+button, input, label {
+  line-height: 1.1;
+}
+
+/* Balance text wrapping on headings */
+h1, h2,
+h3, h4 {
+  text-wrap: balance;
+}
+
+/* A elements that don't have a class get default styles */
+a:not([class]) {
+  text-decoration-skip-ink: auto;
+  color: currentColor;
+}
+
+/* Make images easier to work with */
+img,
+picture {
+  max-width: 100%;
+  display: block;
+}
+
+/* Inherit fonts for inputs and buttons */
+input, button,
+textarea, select {
+  font-family: inherit;
+  font-size: inherit;
+}
+
+/* Make sure textareas without a rows attribute are not tiny */
+textarea:not([rows]) {
+  min-height: 10em;
+}
+
+/* Anything that has been anchored to should have extra scroll margin */
+:target {
+  scroll-margin-block: 5ex;
+}
+
+/*CSS RESET END*/
+
+
+
+/* General Styles 
 body {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -192,7 +271,7 @@ body {
     padding: 1em 0;
   }
   
-  /* Login Section Styles */
+  /* Login Section Styles 
   .account {
     max-width: 1200px;
     margin: 0 auto;
@@ -253,7 +332,7 @@ body {
     background: #0f9d58;
   }
 
-  /* Carrito Styles */
+  /* Carrito Styles 
 .cont {
     max-width: 1200px;
     margin: 0 auto;
@@ -436,8 +515,8 @@ body {
       margin-top: 1em;
     }
   }
-  /* product details*/
-  /* Product Page Styles */
+  /* product details
+  /* Product Page Styles 
 .cont.air-v {
     display: flex;
     flex-direction: column;
@@ -596,4 +675,81 @@ body {
     color: #777;
     margin-bottom: 1em;
   }
-  
+  */
+
+  body {
+    font-family: "Roboto", sans-serif;
+    font-size: 1rem;
+    background-color: #e9dfe2 ;
+  }
+
+  /* navbar mobile */
+
+.mob__navbar {
+  display: flex;
+  align-items: baseline;
+  background-color: #363062;
+  bottom: 0;
+  justify-content: space-around;
+  left: 0;
+  position: fixed;
+  width: 100%;
+  z-index: 100;
+  align-items: center;
+}
+
+.nav-item {
+  display: flex;
+  flex-direction: column;
+  width: 20%;
+  text-align: center;
+  padding: 0.7rem;
+  color: #FFF;
+  font-size: 0.875rem;
+}
+
+
+
+
+  /* Sección de productos */
+.products__section {
+  display: flex;
+  flex-direction: column;
+}
+
+.card__wrapper{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.product__card{
+  max-width: 18rem;
+  border: 1px solid #000;
+  border-radius: 0.5rem;
+  overflow: hidden;
+  margin: 1rem;
+  background-color: #FFF;
+}
+
+.product__name {
+  font-size: 1.4rem;
+}
+
+.product__description {
+  display: flex;
+  flex-direction: column;
+  font-size: 0.875rem ;
+  padding: 0.5rem 1rem;
+  gap: 0.5rem
+}
+
+.product__price {
+  font-weight: 600;
+  font-size: 1.1rem;
+  margin-bottom: 0;
+}
+
+.fa-info-circle {
+  padding-right: 0.25rem;
+}
