--- a/src/views/index.html
+++ b/src/views/index.html
@@ -1,21 +1,26 @@
 <!DOCTYPE html>
 <html lang="es-AR">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="author" content="XT-PC">
-    <title>PowerCore</title>
-    <meta name="description" content="Compra los productos para tu pc gamer en el sitio número uno de Argentina">
-    
-    <link rel="shortcut icon" href="/favicon.ico">
-    <link rel="stylesheet" href="/css/style.css">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"rel="stylesheet" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="/js/scripts.js"></script>
-  </head>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="author" content="XT-PC">
+  <title>PowerCore</title>
+  <meta name="description" content="Compra los productos para tu pc gamer en el sitio número uno de Argentina">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link rel="shortcut icon" href="/favicon.ico">
+  <link rel="stylesheet" href="/css/style.css">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" rel="stylesheet" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+    rel="stylesheet">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="/js/scripts.js"></script>
+</head>
+
 <body>
   <header>
     <nav>
@@ -49,46 +54,99 @@
     </nav>
   </header>
 
+  <div class="mob__navbar">
+    <div class="nav-item home">
+      <a href="/">
+        <img src="images/PowerCore.svg" alt="">
+      </a>
+    </div>
+    <div class="nav-item">
+      <button class="search__mobile">
+        <i class="fa-solid fa-magnifying-glass"></i>
+        Busqueda
+      </button>
+    </div>
+    <div class="nav-item">
+      <a href="productCart"><i class="fa-solid fa-cart-shopping"></i>
+        <br>
+        Carrito</a>
+    </div>
+    <div class="nav-item">
+      <i class="fa-solid fa-bars"></i>
+      Menu
+    </div>
+  </div>
   <main>
-    <section id="hero">
-      <h1>PowerCore - La tienda Gamer #1 de Argentina</h1>
-      <p>Compra los productos para tu pc gamer en el sitio número uno de Argentina</p>
-    </section>
-    <section id="productos">
+    <h1>PowerCore - La tienda Gamer #1 de Argentina</h1>
+    <p>Compra los productos para tu pc gamer en el sitio número uno de Argentina</p>
+    <section id="products__section">
       <h2>Productos Destacados</h2>
-      <div class="productos-grid">
-        <div class="producto">
-            <a href="/productDetail"><img src="/images/productos/1.jpg" alt="Producto 1">
-          <h3>Producto 1</h3>
-          <p class="descripcion">NOTEBOOK HP 15.6"" VICTUS RYZEN 5 7535HS 8GB 512GB RTX 2050 FHD W11 15-FB1013DX</p>
-          <p class="precio">$1000</p>
-          <a href="/productDetail"><i class="fas fa-info-circle"></i>ver detalle</a> 
-          <button class="btn">Comprar</button>
+      <div class="card__wrapper">
+        <div class="product__card">
+          <a href="/productDetail"><img src="images/productos/placeholder.png" alt="Producto 1"></a>
+          <div class="product__description">
+            <p class="product__cathegory">categoría</p>
+            <a href="/productDetail">
+              <h3 class="product__name">Nombre y modelo del producto</h3>
+            </a>
+            <p class="product__price">$100000</p>
+            <a href="/productDetail"><i class="fas fa-info-circle"></i>Ver detalles</a>
+            <button class="btn btn-primary">Agregar al
+              <span>
+                <i class="fa-solid fa-cart-shopping" style="color: #ffffff;"></i>
+              </span>
+            </button>
+          </div>
         </div>
-        <div class="producto">
-            <a href="/productDetail"><img src="/images/productos/2.jpg" alt="Producto 2">
-          <h3>Producto 2</h3>
-          <p class="descripcion">NOTEBOOK HP 15.6"" VICTUS RYZEN 5 7535HS 8GB 512GB RTX 2050 FHD W11 15-FB1013DX</p>
-          <p class="precio">$2000</p>
-          <a href="/productDetail"><i class="fas fa-info-circle"></i>ver detalle</a> 
-          <button class="btn">Comprar</button>
+        <div class="product__card">
+          <a href="/productDetail"><img src="images/productos/placeholder.png" alt="Producto 2"></a>
+          <div class="product__description">
+            <p class="product__cathegory">categoría</p>
+            <a href="/productDetail">
+              <h3 class="product__name">Nombre y modelo del producto</h3>
+            </a>
+            <p class="product__price">$100000</p>
+            <a href="/productDetail"><i class="fas fa-info-circle"></i>Ver detalles</a>
+            <button class="btn btn-primary">Agregar al
+              <span>
+                <i class="fa-solid fa-cart-shopping" style="color: #ffffff;"></i>
+              </span>
+            </button>
+          </div>
         </div>
-        <div class="producto">
-            <a href="/productDetail"><img src="/images/productos/3.jpg" alt="Producto 3">
-          <h3>Producto 3</h3>
-          <p class="descripcion">NOTEBOOK HP 15.6"" VICTUS RYZEN 5 7535HS 8GB 512GB RTX 2050 FHD W11 15-FB1013DX</p>
-          <p class="precio">$3000</p>
-          <a href="/productDetail"><i class="fas fa-info-circle"></i>ver detalle</a> 
-          <button class="btn">Comprar</button>
+        <div class="product__card">
+          <a href="/productDetail"><img src="images/productos/placeholder.png" alt="Producto 1"></a>
+          <div class="product__description">
+            <p class="product__cathegory">categoría</p>
+            <a href="/productDetail">
+              <h3 class="product__name">Nombre y modelo del producto</h3>
+            </a>
+            <p class="product__price">$100000</p>
+            <a href="/productDetail"><i class="fas fa-info-circle"></i>Ver detalles</a>
+            <button class="btn btn-primary">Agregar al
+              <span>
+                <i class="fa-solid fa-cart-shopping" style="color: #ffffff;"></i>
+              </span>
+            </button>
+          </div>
         </div>
-        <div class="producto">
-            <a href="/productDetail"><img src="/images/productos/4.jpg" alt="Producto 4">
-          <h3>Producto 4</h3>
-          <p class="descripcion">NOTEBOOK HP 15.6"" VICTUS RYZEN 5 7535HS 8GB 512GB RTX 2050 FHD W11 15-FB1013DX</p>
-          <p class="precio">$4000</p>
-          <i class="fas fa-info-circle"></i>ver detalle</a> 
-          <button class="btn">Comprar</button>
+        <div class="product__card">
+          <a href="/productDetail"><img src="images/productos/placeholder.png" alt="Producto 1"></a>
+          <div class="product__description">
+            <p class="product__cathegory">categoría</p>
+            <a href="/productDetail">
+              <h3 class="product__name">Nombre y modelo del producto</h3>
+            </a>
+            <p class="product__price">$100000</p>
+            <a href="/productDetail"><i class="fas fa-info-circle"></i>Ver detalles</a>
+            <button class="btn btn-primary">Agregar al
+              <span>
+                <i class="fa-solid fa-cart-shopping" style="color: #ffffff;"></i>
+              </span>
+            </button>
+          </div>
         </div>
+      </div>
       </div>
     </section>
   </main>
@@ -102,7 +160,7 @@
       document.getElementById('user-menu').classList.toggle('show');
     }
 
-    window.onclick = function(event) {
+    window.onclick = function (event) {
       if (!event.target.matches('.fa-user')) {
         var dropdowns = document.getElementsByClassName("user-menu");
         for (var i = 0; i < dropdowns.length; i++) {
@@ -115,4 +173,5 @@
     }
   </script>
 </body>
+
 </html>
