agregando 3 elementos mas a los productos del index

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -146,6 +146,38 @@
             </button>
           </div>
         </div>
+        <div class="product__card">
+          <a href="/productDetail"><img src="images/productos/placeholder.png" alt="Producto 1"></a>
+          <div class="product__description">
+            <p class="product__cathegory">categoría</p>
+            <a href="/productDetail">
+              <h3 class="product__name">Nombre y modelo del producto</h3>
+            </a>
+            <p class="product__price">$100000</p>
+            <a href="/productDetail"><i class="fas fa-info-circle"></i>Ver detalles</a>
+            <button class="btn btn-primary">Agregar al
+              <span>
+                <i class="fa-solid fa-cart-shopping" style="color: #ffffff;"></i>
+              </span>
+            </button>
+          </div>
+        </div>
+        <div class="product__card">
+          <a href="/productDetail"><img src="images/productos/placeholder.png" alt="Producto 1"></a>
+          <div class="product__description">
+            <p class="product__cathegory">categoría</p>
+            <a href="/productDetail">
+              <h3 class="product__name">Nombre y modelo del producto</h3>
+            </a>
+            <p class="product__price">$100000</p>
+            <a href="/productDetail"><i class="fas fa-info-circle"></i>Ver detalles</a>
+            <button class="btn btn-primary">Agregar al
+              <span>
+                <i class="fa-solid fa-cart-shopping" style="color: #ffffff;"></i>
+              </span>
+            </button>
+          </div>
+        </div>
       </div>
       </div>
     </section>
