--- a/public/css/style.css
+++ b/public/css/style.css
@@ -166,3 +166,40 @@ textarea:not([rows]) {
 .cuentas{
   text-align: left;
 }
+.form-input{
+  width: 90vw;
+  margin-bottom: 3px;
+  border: 1px solid lightblue;
+  height: 30px;
+  border-radius: 5px;
+}
+.info{
+  width: 90vw;
+  margin-top: 10px;
+}
+.btn {
+  display: inline-block;
+  font-weight: 400;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  user-select: none;
+  border: 1px solid transparent;
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  line-height: 1.5;
+  border-radius: 0.25rem;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+.btn-accent {
+  color: #fff;
+  background-color:#363062;
+  border-color: #2c2750;
+}
+
+.btn-accent:hover {
+  color: #fff;
+  background-color: #0056b3;
+  border-color: #004085;
+}
