agrandando el boton con css y dando colores

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -177,8 +177,12 @@ textarea:not([rows]) {
   width: 90vw;
   margin-top: 10px;
 }
+.cta{
+  text-align: center;
+}
 .btn {
   display: inline-block;
+  width: 150px;
   font-weight: 400;
   text-align: center;
   white-space: nowrap;
@@ -190,6 +194,7 @@ textarea:not([rows]) {
   line-height: 1.5;
   border-radius: 0.25rem;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  
 }
 
 .btn-accent {
