--- a/src/views/login.html
+++ b/src/views/login.html
@@ -1,54 +1,81 @@
 <!DOCTYPE html>
 <html lang="es-AR">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="author" content="XT-PC">
-    <title>PowerCore</title>
-    <meta name="description" content="Compra los productos para tu pc gamer en el sitio número uno de Argentina">
-    
-    <link rel="shortcut icon" href="/favicon.ico">
-    <link rel="stylesheet" href="/css/style.css">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"rel="stylesheet" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="js/scripts.js"></script>
-  </head>
-<body>
-    <header>
-        <nav>
-          <div id="logo">
-            <img src="/images/PowerCore.svg" alt="PowerCore">
-          </div>
-          <div id="menu">
-            <ul>
-              <li><a href="/">Inicio</a></li>
-              <li><a href="#">Productos</a></li>
-              <li><a href="#">Contacto</a></li>
-            </ul>
-          </div>
-          <div id="search">
-            <input type="text" placeholder="Buscar...">
-            <button><i class="fas fa-search"></i></button>
-          </div>
-          <div id="user">
-            <i class="fas fa-user" onclick="toggleUserMenu()"></i>
-            <div id="user-menu">
-              <ul>
-                <li><a href="/register">Registrarse</a></li>
-                <li><a href="/login">Ingresar</a></li>
-                <li><a href="/productCart">Ver Pedidos</a></li>
-              </ul>
-            </div>
-          </div>
-          <div id="cart">
-            <a href="/productCart"><i class="fas fa-shopping-cart"></i></a>
-          </div>
-        </nav>
-      </header>
 
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="author" content="XT-PC">
+  <title>PowerCore</title>
+  <meta name="description" content="Compra los productos para tu pc gamer en el sitio número uno de Argentina">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link rel="shortcut icon" href="/favicon.ico">
+  <link rel="stylesheet" href="/css/style.css">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" rel="stylesheet" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+    rel="stylesheet">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="/js/scripts.js"></script>
+</head>
+
+<body>
+  <header>
+    <nav>
+      <div id="logo">
+        <img src="/images/PowerCore.svg" alt="PowerCore">
+      </div>
+      <div id="menu">
+        <ul>
+          <li><a href="/">Inicio</a></li>
+          <li><a href="#">Productos</a></li>
+          <li><a href="#">Contacto</a></li>
+        </ul>
+      </div>
+      <div id="search">
+        <input type="text" placeholder="Buscar...">
+        <button><i class="fas fa-search"></i></button>
+      </div>
+      <div id="user">
+        <i class="fas fa-user" onclick="toggleUserMenu()"></i>
+        <div id="user-menu">
+          <ul>
+            <li><a href="/register">Registrarse</a></li>
+            <li><a href="/login">Ingresar</a></li>
+            <li><a href="/productCart">Ver Pedidos</a></li>
+          </ul>
+        </div>
+      </div>
+      <div id="cart">
+        <a href="/productCart"><i class="fas fa-shopping-cart"></i></a>
+      </div>
+    </nav>
+  </header>
+
+  <div class="mob__navbar">
+    <div class="nav-item home">
+      <a href="/">
+        <img src="images/PowerCore.svg" alt="">
+      </a>
+    </div>
+    <div class="nav-item">
+      <button class="search__mobile">
+        <i class="fa-solid fa-magnifying-glass"></i>
+        Busqueda
+      </button>
+    </div>
+    <div class="nav-item">
+      <a href="productCart"><i class="fa-solid fa-cart-shopping"></i>
+        <br>
+        Carrito</a>
+    </div>
+    <div class="nav-item">
+      <i class="fa-solid fa-bars"></i>
+      Menu
+    </div>
+  </div>
   <main>
     <div class="account">
   
@@ -147,8 +174,6 @@
       </div>
     </div>
   </main>
-  
-  
 
   <footer>
     <p>&copy; 2024 PowerCore. Trabajo grupal N&deg; 5.</p>
@@ -159,7 +184,7 @@
       document.getElementById('user-menu').classList.toggle('show');
     }
 
-    window.onclick = function(event) {
+    window.onclick = function (event) {
       if (!event.target.matches('.fa-user')) {
         var dropdowns = document.getElementsByClassName("user-menu");
         for (var i = 0; i < dropdowns.length; i++) {
@@ -172,4 +197,5 @@
     }
   </script>
 </body>
+
 </html>
