--- a/public/css/style.css
+++ b/public/css/style.css
@@ -95,6 +95,7 @@ textarea:not([rows]) {
   width: 100%;
   z-index: 100;
   align-items: center;
+  
 }
 
 .nav-item {
@@ -156,6 +157,9 @@ textarea:not([rows]) {
 .item{
   margin-top: 20px;
   margin-bottom: 20px;
+}
+main{
+  margin-bottom: 50px;
 }
 
 /* register */
