--- a/public/css/style.css
+++ b/public/css/style.css
@@ -103,7 +103,7 @@ textarea:not([rows]) {
   flex-direction: column;
   width: 20%;
   text-align: center;
-  padding: 0.7rem;
+  padding: 0.2rem;
   color: #FFF;
   font-size: 0.875rem;
 }
@@ -170,7 +170,7 @@ main{
 /* register */
 .account {
   width: 100%;
-  max-width: 400px; /* Ajustar según sea necesario */
+  max-width: 400px; 
   background-color: #fff;
   padding: 20px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -220,4 +220,18 @@ main{
   color: #fff;
   background-color: #0056b3;
   border-color: #004085;
+}
+
+/* barra buscador */
+.search__mobile {
+  width: 80px;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  padding: 5px; 
+  box-sizing: border-box; 
+  border-radius: 10px;
+}
+.search__mobile i{
+  position: left;
 }
