cambios en productos detalle

--- a/src/views/productCart.html
+++ b/src/views/productCart.html
@@ -96,7 +96,7 @@
         </div>
         <div class="item">
           <div class="image">
-            <a href="#"><img src="/img/productos/5/PCA003.jpg"  alt="pc-armada-amd-athlon-3000g-8gb-240gb-kit"></a>
+            <a href="#"><img src="images/productos/placeholder.png"  alt="pc-armada-amd-athlon-3000g-8gb-240gb-kit"></a>
           </div>
           <div class="meta">
             <div class="title"><a href="#">
