--- a/src/views/productDetail.html
+++ b/src/views/productDetail.html
@@ -92,7 +92,7 @@
             </span>
         </a>
         <span class="sep"> /</span>
-        <a href="/cat/398/pc-armada-amd-athlon/1" itemprop="itemListElement" typeof="ListItem">
+        <a href="images/productos/placeholder.png" itemprop="itemListElement" typeof="ListItem">
             <span itemprop="item">
                 <span itemprop="name"> PC ARMADA AMD ATHLON </span>
                 <meta itemprop="position" content="3">
@@ -110,19 +110,19 @@
     <div class="product">
         <div class="img air">
             <div class="featured">
-                <img id="mainpic" src="/img/productos/5/PCA003.jpg" alt="pc-armada-amd-athlon-3000g-8gb-240gb-kit">
+                <img id="mainpic" src="images/productos/placeholder.png" alt="pc-armada-amd-athlon-3000g-8gb-240gb-kit">
             </div>
             <div class="more">
                 <div class="item">
-                    <img src="/img/productos/5/PCA003.jpg" alt="pc-armada-amd-athlon-3000g-8gb-240gb-kit">
+                    <img src="images/productos/placeholder.png" alt="pc-armada-amd-athlon-3000g-8gb-240gb-kit">
                 </div>
                 <!-- Additional images gallery -->
             </div>
             <div class="info-img">
-                * LAS IMÁGENES SON AL EFECTO MERAMENTE ILUSTRATIVO Y NO SON CONTRACTUALES
+                * LAS IMÁGENES SON AL EFECTO MERAMENTE ILUSTRATIVO, SON PLACEHOLDER
             </div>
         </div>
-
+<BR><BR>
         <div class="meta">
             <h1>PC ARMADA AMD ATHLON 3000G + 8GB + 240GB + KIT</h1>
             <div class="shipping">
@@ -147,7 +147,7 @@
                 <form action="javascript:void(0)" id="AddCart">
                     <input type="hidden" name="idprod" value="11398">
                     <button onclick="decrementValue('');"><i class="fas fa-minus"></i></button>
-                    <input class="form-input" type="number" step="1" min="0" max="5" name="quantity" id="prod-qty" value="1" title="Cantidad" inputmode="numeric">
+                    <input style="width: 60px;text-align: center;" class="form-input" type="number" step="1" min="0" max="5" name="quantity" id="prod-qty" value="1" title="Cantidad" inputmode="numeric" size="5">
                     <button onclick="incrementValue('');"><i class="fas fa-plus"></i></button>
                 </form>
             </div>
@@ -185,10 +185,11 @@
                 <div class="item product-xs">
                     <a href="/prod/11063/pc-armada-amd-athlon-3000g-8gb-1tb-ssd-monitor-22">
                         <div class="image-full">
-                            <img src="/img/productos/5/PCA006.jpg"alt="pc-armada-amd-athlon-3000g-8gb-1tb-ssd-monitor-22">
+                            <img src="images/productos/placeholder.png"alt="pc-armada-amd-athlon-3000g-8gb-1tb-ssd-monitor-22">
                         </div>
                         <div class="info">
                             <h3 class="tituloalto" style="height: 55px;">PC ARMADA AMD ATHLON 3000G+8GB+1TB SSD+MONITOR 22"</h3>
+                            <br>
                             <div class="price">$404.489,92 <span class="price-promo">$444.938,88</span></div>
                             <div class="cta">
                                 <div class="btn btn-outline" onclick="quickAddCart(11063,1)">
