cambios en productos al carrito

--- a/src/views/productCart.html
+++ b/src/views/productCart.html
@@ -112,7 +112,7 @@
             <form action="javascript:void(0)" id="cartUpdate11398">
               <input type="hidden" name="idprod" value="11398">
               <button onclick="decrementValue('11398');cartUpdate(11398);"><i class="fas fa-minus"></i></button>
-              <input onchange="cartUpdate(11398);" class="form-input" type="number" step="1" min="0" max="20" name="quantity" id="prod-qty11398" value="1" title="Cantidad" inputmode="numeric">
+              <input style="width: 60px;text-align: center;" onchange="cartUpdate(11398);" class="form-input" type="number" step="1" min="0" max="20" name="quantity" id="prod-qty11398" value="1" title="Cantidad" inputmode="numeric">
               <button onclick="incrementValue('11398');cartUpdate(11398);"><i class="fas fa-plus"></i></button>
             </form>
           </div>
@@ -145,7 +145,7 @@
           <div class="cta">
             <button data-modal="#vaciar" class="btn btn-outline" name="modal">Vaciar carrito</button>
             <button data-modal="#coupon" class="btn btn-outline" name="modal">Tengo un cupón</button>
-            <button data-modal="#paymethods" class="btn btn-accent" name="modal">Siguiente</button>
+            <button data-modal="#paymethods" class="btn btn-accent" name="modal">Comprar</button>
           </div>
         </div>
       </div>
