cambios en detalle productos

--- a/src/views/productDetail.html
+++ b/src/views/productDetail.html
@@ -170,11 +170,15 @@
 
         <div class="info air">
             <h1>ESTE EQUIPO ARMADO INCLUYE:</h1>
-            <h2>1 | GABINETE KIT<br>
-                1 | MOTHER A320M DDR4 AM4<br>
-                1 | MICRO AMD ATHLON 3000G C/VIDEO RADEON VEGA 3 INTEGRADO<br>
-                1 | MEMORIA 8GB 3200 DDR4<br>
-                1 | HD SSD 240GB</h2>
+            <ul>
+              <li>1 - MOTHER A320M DDR4 AM4</li>
+              <li>1 - MEMORIA 8GB 3200 DDR4</li>
+              <li>1 - HD SSD 240GB</li>
+              <li>1 - MICRO AMD ATHLON 3000G C/VIDEO RADEON VEGA 3 INTEGRADO</li>
+              <li>1 - PAD</li>
+              <li>1 - PENDRIVER 8GB</li>
+              <li>1 - WIFI-USB</li>
+            </ul>
             <p>*** NO INCLUYE SISTEMA OPERATIVO ***<br>
                 *** INCLUYE TECLADO / MOUSE ***</p>
         </div>
