quitando algunas div que no usaremos por ahora en produc details

--- a/src/views/productDetail.html
+++ b/src/views/productDetail.html
@@ -182,7 +182,7 @@
             <p>*** NO INCLUYE SISTEMA OPERATIVO ***<br>
                 *** INCLUYE TECLADO / MOUSE ***</p>
         </div>
-
+<br>
         <div class="also air">
             <h2>Productos relacionados</h2>
             <div class="also-products">
@@ -194,7 +194,7 @@
                         <div class="info">
                             <h3 class="tituloalto" style="height: 55px;">PC ARMADA AMD ATHLON 3000G+8GB+1TB SSD+MONITOR 22"</h3>
                             <br>
-                            <div class="price">$404.489,92 <span class="price-promo">$444.938,88</span></div>
+                            <div class="price">Precio Contado: $404.489,92 <br><span class="price-promo">Promo: $444.938,88</span></div>
                             <div class="cta">
                                 <div class="btn btn-outline" onclick="quickAddCart(11063,1)">
                                     <i class="fas fa-shopping-cart"></i> Agregar
@@ -208,33 +208,6 @@
         </div>
 
         <div class="prod-code">Código del producto: PCA003</div>
-    </div>
-
-    <!-- Variants of cards -->
-    <div class="card-variant">
-        <!-- Card variant 1 -->
-        <h2>Card Variant 1</h2>
-        <p>Description of variant 1.</p>
-    </div>
-    <div class="card-variant">
-        <!-- Card variant 2 -->
-        <h2>Card Variant 2</h2>
-        <p>Description of variant 2.</p>
-    </div>
-    <div class="card-variant">
-        <!-- Card variant 3 -->
-        <h2>Card Variant 3</h2>
-        <p>Description of variant 3.</p>
-    </div>
-    <div class="card-variant">
-        <!-- Card variant 4 -->
-        <h2>Card Variant 4</h2>
-        <p>Description of variant 4.</p>
-    </div>
-    <div class="card-variant">
-        <!-- Card variant 5 -->
-        <h2>Card Variant 5</h2>
-        <p>Description of variant 5.</p>
     </div>
 </main>
 
